flux/trusted/paperless-ngx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    network-zone: trusted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
