flux/trusted/paperless-ngx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.kschamer.info`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: authelia-forwardauth
          namespace: traefik
      services:
        - name: paperless-ngx
          port: 8000
  tls:
    certResolver: letsencrypt
    domains:
      - main: kschamer.info
        sans:
          - "*.kschamer.info"
